# zephyr-rtos-iot-sensor-node

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: cpp17-design-patterns-and-solid.md  deep-architecture.md  nrf52840-bringup.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  full-system-uml.drawio
firmware/zephyr/: CMakeLists.txt  README.md  prj.conf
firmware/zephyr/src/: main.c
include/sensor_node/: SensorNode.hpp
src/: SensorNode.cpp  main.c  main.cpp
tests/: ProfileTests.cpp  SensorNodeTests.cpp  test_repo_smoke.py
